# cmsis-pack-manager

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  MANIFEST.in  README.md  appveyor.bat  appveyor.yml  build-wheels.sh  cbindgen.toml  circle.yml  conf.py  genindex.html  index.html  keil.pidx  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  setup_requirements.txt  src  test_requirements.txt  travis.sh
.github/workflows/: ci-build-wheel-linux.yml  ci-build-wheel-macos.yml  ci-build-wheel-windows.yml  ci-build-wheel.yml  ci.yml  wheels-linux.yml  wheels-mac.yml  wheels-windows.yml  wheels.yml
ArmPackManager/: __init__.py  cli.py  pack_manager.py
_modules/: ArmPackManager.html  index.html
_sources/: index.txt
arm_pack_manager/: pack_manager.py
benches/: bench.pidx  pack_index.rs
cmsis_pack_manager/: __init__.py  pack_manager.py
rust/: .clippy.toml  Cargo.toml  build.rs
rust/cmsis/: Cargo.toml
rust/cmsis-cffi/: Cargo.toml  README.md  build.rs  cbindgen.toml  cmsis.h
rust/cmsis-cffi/src/: config.rs  lib.rs  pack.rs  pack_index.rs  pdsc.rs  utils.rs
rust/cmsis-cli/: Cargo.toml  README.md
rust/cmsis-cli/src/: config.rs  lib.rs  main.rs
rust/cmsis-pack/: Cargo.toml  README.md
rust/cmsis-pack/benches/: bench.pdsc  bench.vidx  pack_index.rs
rust/cmsis-pack/src/: lib.rs  pack_index.rs  pdsc.rs  update.rs  utils.rs
rust/cmsis-pack/src/cmsis_update/: download.rs  mod.rs
rust/cmsis-pack/src/pack_index/: mod.rs
rust/cmsis-pack/src/pdsc/: component.rs  condition.rs  device.rs  mod.rs
rust/cmsis-pack/src/update/: download.rs  mod.rs
rust/cmsis-pack/src/utils/: mod.rs  parse.rs  prelude.rs
rust/cmsis-update/: Cargo.toml
rust/cmsis-update/src/: dl_pack.rs  dl_pdsc.rs  download.rs  lib.rs  redirect.rs  vidx.rs
rust/cmsis/src/: lib.rs  pdsc.rs
rust/pack-index/: Cargo.toml
rust/pack-index/src/: config.rs  lib.rs  network.rs  parse.rs
rust/pdsc/: Cargo.toml
rust/pdsc/src/: component.rs  condition.rs  device.rs  lib.rs
rust/src/: config.rs  lib.rs  main.rs  parse.rs
rust/src/pack_index/: cffi.rs  mod.rs  network.rs
rust/src/pdsc/: mod.rs
rust/utils/: Cargo.toml
rust/utils/src/: lib.rs  parse.rs
src/: config.rs  lib.rs  logging.rs  main.rs  parse.rs
src/pack_index/: .#bench.rs  mod.rs  network.rs
src/pdsc/: mod.rs
tests/: integration.py  pack_index.rs  unit.py
tests/test-pack-index/: MyVendor.MyPack.1.1.0.pack  MyVendor.MyPack.pdsc  index.pidx  vendors.list
