[package]
name = "cmsis-pack-manager"
version = "0.1.0"
authors = ["Jimmy Brisson <theotherjimmy@gmail.com>"]

[dependencies]
error-chain = "0.10.0"
futures = "0.1.14"
futures-error-chain = "0.1.0"
hyper = "0.11.2"
hyper-tls = "0.1.2"
minidom = "0.5.0"
quick-xml = "0.7.3"
smallstring = "*"
tokio-core = "0.1.6"
xdg = "2.1.0"
log = "0.3.8"
clap = "2.19.0"

[dev-dependencies]
time = "*"