[package]
name = "cmsis-pack-manager"
version = "0.5.3"
authors = ["Jimmy Brisson <theotherjimmy@gmail.com>",
           "Chris Reed <flit@me.com>",
           "Mathias Brossard <mathias.brossard@arm.com>"]
repository = "https://github.com/pyocd/cmsis-pack-manager"
description = "Foreign Function Interface for cmsis-pack"
license = "Apache-2.0"
edition = "2018"
readme = "README.md"

[lib]
name = "cmsis_pack_manager"
crate-type = ["cdylib"]

[dependencies]
ctor = "0.2"
log = "0.4.8"
simplelog = { version = "0.12.0", default-features = false, features = [ "termcolor" ] }
cmsis-pack = { version = "0.7.0", path = "rust/cmsis-pack" }
anyhow = { version = "1.0.56", features = ["backtrace"] }

[features]
