[metadata]
name = cmsis-pack-manager
description = Python manager for CMSIS-Pack index and cache with fast Rust backend
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pyocd/cmsis-pack-manager
maintainer = Mathias Brossard, Chris Reed
maintainer_email = mathias.brossard@arm.com, flit@me.com
license = Apache 2.0
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development
    Topic :: Software Development :: Debuggers
    Topic :: Software Development :: Embedded Systems
    Topic :: Utilities
project_urls =
    Documentation = https://github.com/pyocd/cmsis-pack-manager/
    Bug Tracker = https://github.com/pyocd/cmsis-pack-manager/issues
    Discussions = https://github.com/pyocd/cmsis-pack-manager/discussions
    Changelog = https://github.com/pyocd/cmsis-pack-manager/releases

[options]
packages = find:
install_requires =
    appdirs>=1.4,<2.0
    pyyaml>=6.0,<7.0
python_requires = >=3.6
include_package_data = True
zip_safe = False

[options.extras_require]
test =
    pytest>=6.0
    hypothesis
    jinja2

[options.entry_points]
console_scripts =
    pack-manager = cmsis_pack_manager.pack_manager:main

[tool:pytest]
python_files = tests/*.py
