[package]
name = "cmsis-cffi"
version = "0.4.0"
authors = ["Jimmy Brisson <theotherjimmy@gmail.com>",
           "Chris Reed <flit@me.com>",
           "Mathias Brossard <mathias.brossard@arm.com>"]
repository = "https://github.com/pyocd/cmsis-pack-manager"
description = "Foreign Function Interface for cmsis-pack"
license = "Apache-2.0"
edition = "2018"
readme = "README.md"

[lib]
name = "cmsis_cffi"
crate-type = ["cdylib"]

[dependencies]
ctor = "0.1.15"
log = "0.4.8"
simplelog = "0.9.0"
failure = "0.1.1"
cmsis-pack = { version = "0.4.0", path = "../cmsis-pack" }
