[package]
name = "cmsis-cffi"
version = "0.7.1"
authors = ["Jimmy Brisson <theotherjimmy@gmail.com>",
           "Chris Reed <flit@me.com>",
           "Mathias Brossard <mathias.brossard@arm.com>"]
repository = "https://github.com/pyocd/cmsis-pack-manager"
description = "Foreign Function Interface for cmsis-pack"
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
rust-version = "1.71"

[lib]
name = "cmsis_cffi"
crate-type = ["cdylib"]

[dependencies]
ctor = "0.2"
log = "0.4.8"
simplelog = { version = "0.12.0", default-features = false, features = [ "termcolor" ] }
cmsis-pack = { version = "0.7.0", path = "../cmsis-pack" }
anyhow = { version = "1.0.56", features = ["backtrace"] }

[features]
