[package]
name = "cmsis-cli"
version = "0.4.0"
authors = ["Jimmy Brisson <theotherjimmy@gmail.com>",
           "Chris Reed <flit@me.com>",
           "Mathias Brossard <mathias.brossard@arm.com>"]
repository = "https://github.com/pyocd/cmsis-pack-manager"
description = "Simple command line interface for CMSIS Pack management"
license = "Apache-2.0"
edition = "2018"

[lib]
name = "cmsis_cli"
path = "src/lib.rs"

[[bin]]
name = "cmsis-cli"
path = "src/main.rs"

[dependencies]
app_dirs = "1.2.1"
clap = "2.33.1"
failure = "0.1.1"
log = "0.4.8"
simplelog = "0.9.0"
pbr = "^1.0.0"
cmsis-pack = { version = "0.4.0", path = "../cmsis-pack" }
