[package]
name = "cmsis-cli"
version = "0.7.2"
authors = ["Jimmy Brisson <theotherjimmy@gmail.com>",
           "Chris Reed <flit@me.com>",
           "Mathias Brossard <mathias.brossard@arm.com>"]
repository = "https://github.com/pyocd/cmsis-pack-manager"
description = "Simple command line interface for CMSIS Pack management"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.71"

[lib]
name = "cmsis_cli"
path = "src/lib.rs"

[[bin]]
name = "cmsis-cli"
path = "src/main.rs"

[dependencies]
directories = "4"
clap = "2.33.1"
log = "0.4.8"
simplelog = { version = "0.12.0", default-features = false, features = [ "termcolor" ] }
pbr = "^1.0.0"
cmsis-pack = { version = "0.7.2", path = "../cmsis-pack" }
anyhow = "1.0.56"

[features]
