[package]
name = "cmsis-pack"
version = "0.4.0"
authors = ["Jimmy Brisson <theotherjimmy@gmail.com>",
           "Chris Reed <flit@me.com>",
           "Mathias Brossard <mathias.brossard@arm.com>"]
repository = "https://github.com/pyocd/cmsis-pack-manager"
description = "Rust crate for managing CMSIS Packs"
license = "Apache-2.0"
categories = ["embedded", "hardware-support", "development-tools::debugging"]
keywords = ["embedded", "cmsis"]
readme = "README.md"
edition = "2018"

[dependencies]
bytes = "1.0"
failure = "0.1.1"
futures = "0.3.8"
log = "0.4.8"
minidom = "^0.12.0"
quick-xml = "0.17.2"
rustc-demangle = "0.1.16"
serde = { version = "1.0.118", features = ["derive"] }
serde_derive = "1.0.118"
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt"] }

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
reqwest = { version = "0.11.0", default_features = false, features = ["native-tls", "trust-dns", "stream"] }

[target.'cfg(not(any(target_os = "macos", target_os = "windows")))'.dependencies]
reqwest = { version = "0.11.0", default_features = false, features = ["rustls-tls", "trust-dns", "stream"] }

[dev-dependencies]
time = "0.2.16"

[features]
default = []
