[package]
name = "cmsis-pack"
version = "0.3.0"
authors = ["Jimmy Brisson <theotherjimmy@gmail.com>",
           "Chris Reed <flit@me.com>",
           "Mathias Brossard <mathias.brossard@arm.com>"]
repository = "https://github.com/pyocd/cmsis-pack-manager"
description = "Rust crate for managing CMSIS Packs"
license = "Apache-2.0"
categories = ["embedded", "hardware-support", "development-tools::debugging"]
keywords = ["embedded", "cmsis"]
edition = "2018"

[dependencies]
failure = "0.1.1"
futures = "0.1.29"
log = "0.4.8"
minidom = "^0.12.0"
quick-xml = "0.17.2"
reqwest = { version = "0.9.24", default_features = false, features = ["rustls-tls"] }
rustc-demangle = "0.1.16"
serde = "^1.0.89"
serde_derive = "^1.0.89"
serde_json = "1.0"
tokio-core = "0.1.17"

[dev-dependencies]
time = "0.2.16"

[features]
default = []
