[package]
name = "cmsis-pack"
version = "0.6.0"
authors = ["Jimmy Brisson <theotherjimmy@gmail.com>",
           "Chris Reed <flit@me.com>",
           "Mathias Brossard <mathias.brossard@arm.com>"]
repository = "https://github.com/pyocd/cmsis-pack-manager"
description = "Rust crate for managing CMSIS Packs"
license = "Apache-2.0"
categories = ["embedded", "hardware-support", "development-tools::debugging"]
keywords = ["embedded", "cmsis"]
readme = "README.md"
edition = "2018"

[dependencies]
bytes = "1.0"
futures = "0.3.8"
log = "0.4.8"
minidom = "0.12.0"
rustc-demangle = "0.1.16"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt"] }
reqwest = { version = "0.11.0", default_features = false, features = ["rustls-tls", "trust-dns", "stream"] }
anyhow = "1.0.56"

[dev-dependencies]
time = "0.3.3"

[features]
default = []
