[package]
name = "cmsis-update"
version = "0.1.0"
authors = ["Jimmy Brisson <theotherjimmy@gmail.com>"]

[dependencies]
futures-await = "0.1.1"
futures-await-async-macro = "0.1.4"
hyper = "0.11.21"
hyper-rustls = "0.12.0"
minidom = "0.5.0"
slog = "^2"
slog-term = "^2"
slog-async = "^2"
tokio-core = "0.1.17"
failure = "0.1.1"

utils = { path = "../utils" }
pack-index = { path = "../pack-index" }
pdsc = { path = "../pdsc" }

