[package]
name = "pdsc"
version = "0.1.0"
authors = ["Jimmy Brisson <theotherjimmy@gmail.com>"]

[dependencies]
custom_derive = "0.1.1"
enum_derive = "0.1.7"
minidom = "0.5.0"
slog = "^2"
clap = "2.19.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
failure = "0.1.1"
utils = { path = "../utils" }
pack-index = { path = "../pack-index" }
